@@ -5,27 +5,35 @@ import greencity.constant.OrderHistory;
 import greencity.dto.OptionForColumnDTO;
 import greencity.dto.TitleDto;
 import greencity.dto.courier.ReceivingStationDto;
+import greencity.dto.location.api.CityInfoDto;
+import greencity.dto.location.api.DistrictInfoDto;
+import greencity.dto.location.api.RegionInfoDto;
 import greencity.dto.order.BlockedOrderDto;
 import greencity.dto.order.ChangeOrderResponseDTO;
 import greencity.dto.order.RequestToChangeOrdersDataDto;
 import greencity.dto.table.ColumnDTO;
 import greencity.dto.table.ColumnWidthDto;
 import greencity.dto.table.TableParamsDto;
-import greencity.entity.order.Certificate;
-import greencity.entity.order.ChangeOfPoints;
-import greencity.entity.order.Event;
-import greencity.entity.order.Order;
-import greencity.entity.order.OrderPaymentStatusTranslation;
+import greencity.dto.user.ChatLinkDto;
 import greencity.entity.table.TableColumnWidthForEmployee;
-import greencity.entity.user.User;
+import greencity.entity.user.Region;
 import greencity.entity.user.employee.Employee;
 import greencity.entity.user.employee.EmployeeOrderPosition;
 import greencity.entity.user.employee.Position;
 import greencity.entity.user.employee.ReceivingStation;
+import greencity.entity.user.locations.City;
+import greencity.entity.user.locations.District;
+import greencity.entity.user.ubs.OrderAddress;
 import greencity.enums.CancellationReason;
 import greencity.enums.EditType;
 import greencity.enums.OrderStatus;
 import greencity.enums.PaymentStatus;
+import greencity.entity.order.Certificate;
+import greencity.entity.order.ChangeOfPoints;
+import greencity.entity.order.Order;
+import greencity.entity.order.Event;
+import greencity.entity.order.OrderPaymentStatusTranslation;
+import greencity.entity.user.User;
 import greencity.exceptions.BadRequestException;
 import greencity.exceptions.NotFoundException;
 import greencity.filters.OrderPage;
@@ -34,6 +42,7 @@ import greencity.repository.AddressRepository;
 import greencity.repository.CertificateRepository;
 import greencity.repository.EmployeeOrderPositionRepository;
 import greencity.repository.EmployeeRepository;
+import greencity.repository.OrderAddressRepository;
 import greencity.repository.OrderPaymentStatusTranslationRepository;
 import greencity.repository.OrderRepository;
 import greencity.repository.OrderStatusTranslationRepository;
@@ -41,50 +50,58 @@ import greencity.repository.PositionRepository;
 import greencity.repository.ReceivingStationRepository;
 import greencity.repository.TableColumnWidthForEmployeeRepository;
 import greencity.repository.UserRepository;
+import greencity.repository.RegionRepository;
+import greencity.repository.CityRepository;
+import greencity.repository.DistrictRepository;
 import greencity.service.SuperAdminService;
 import greencity.service.notification.NotificationServiceImpl;
-import jakarta.persistence.EntityNotFoundException;
-import lombok.Data;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.HashSet;
+import java.util.Objects;
+import java.util.function.Consumer;
+import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.EnumUtils;
 import org.modelmapper.ModelMapper;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-
+import jakarta.persistence.EntityNotFoundException;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
-import java.util.stream.Collectors;
-
+import org.springframework.transaction.annotation.Transactional;
 import static greencity.constant.ErrorMessage.DATE_OF_EXPORT_NOT_SPECIFIED_FOR_ORDER;
 import static greencity.constant.ErrorMessage.EMPLOYEE_DOESNT_EXIST;
 import static greencity.constant.ErrorMessage.EMPLOYEE_NOT_FOUND;
 import static greencity.constant.ErrorMessage.EMPLOYEE_WITH_UUID_NOT_FOUND;
 import static greencity.constant.ErrorMessage.EMPTY_ORDERS_ID_COLLECTION;
+import static greencity.constant.ErrorMessage.NOT_FOUND_ADDRESS_BY_ORDER_ID;
 import static greencity.constant.ErrorMessage.ORDER_IS_BLOCKED;
 import static greencity.constant.ErrorMessage.ORDER_PAYMENT_STATUS_NOT_FOUND;
+import static greencity.constant.ErrorMessage.ORDER_STATUS_INVALID;
 import static greencity.constant.ErrorMessage.ORDER_STATUS_NOT_FOUND;
 import static greencity.constant.ErrorMessage.ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST;
 import static greencity.constant.ErrorMessage.POSITION_NOT_FOUND_BY_ID;
+import static greencity.constant.ErrorMessage.USER_WITH_CURRENT_ID_DOES_NOT_EXIST;
 import static greencity.constant.ErrorMessage.USER_WITH_CURRENT_UUID_DOES_NOT_EXIST;
+import static greencity.constant.OrderHistory.UBS_ADMIN;
 import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
 
 @Service
-@Data
+@RequiredArgsConstructor
 public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
     private final OrderRepository orderRepository;
     private final EmployeeRepository employeeRepository;
     private final CertificateRepository certificateRepository;
-    private final UBSManagementEmployeeService employeeService;
     private final ModelMapper modelMapper;
     private final ReceivingStationRepository receivingStationRepository;
     private final PositionRepository positionRepository;
@@ -98,6 +115,11 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
     private final EventService eventService;
     private final NotificationServiceImpl notificationService;
     private final SuperAdminService superAdminService;
+    private final OrderLockService orderLockService;
+    private final RegionRepository regionRepository;
+    private final CityRepository cityRepository;
+    private final DistrictRepository districtRepository;
+    private final OrderAddressRepository orderAddressRepository;
     private static final String ORDER_STATUS = "orderStatus";
     private static final String DATE_OF_EXPORT = "dateOfExport";
     private static final String RECEIVING = "receivingStation";
@@ -109,6 +131,9 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
     private static final String CANCELLATION_REASON = "cancellationReason";
     private static final String CANCELLATION_COMMENT = "cancellationComment";
     private static final String ADMIN_COMMENT = "adminComment";
+    private static final String ADDRESS_COMMENT = "commentToAddressForClient";
+    private static final String CLIENT_COMMENT = "commentForOrderByClient";
+    private static final String ORDER_COMMENT = "commentsForOrder";
     private static final String WITHOUT_ID = "-1";
     private static final String WITHOUT_MANAGER_EN = "Without manager";
     private static final String WITHOUT_MANAGER_UA = "Без менеджера";
@@ -118,10 +143,12 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
     private static final String WITHOUT_NAVIGATOR_UA = "Без штурмана";
     private static final String WITHOUT_DRIVER_EN = "Without driver";
     private static final String WITHOUT_DRIVER_UA = "Без водія";
+    private static final String DISTRICT = "district";
     private static final String WITHOUT_EMPLOYEE = "-1";
     private static final String IGNORE_VALUE_FOR_EMPLOYEE = "0";
 
     @Override
+    @Cacheable(value = "TableParams", key = "#uuid")
     public TableParamsDto getParametersForOrdersTable(String uuid) {
         String ordersInfo = "ORDERS_INFO";
         String customersInfo = "CUSTOMERS_INFO";
@@ -133,7 +160,7 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
         OrderPage orderPage = new OrderPage();
         OrderSearchCriteria orderSearchCriteria = new OrderSearchCriteria();
 
-        List<ColumnDTO> columnDTOS = Collections.unmodifiableList(new ArrayList<>(Arrays.asList(
+        List<ColumnDTO> columnDTOS = List.of(
             new ColumnDTO(new TitleDto("select", "Вибір", "Select"), "", 20, true, true, false, 0,
                 EditType.CHECKBOX,
                 new ArrayList<>(), ""),
@@ -150,9 +177,9 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                 4, EditType.READ_ONLY, new ArrayList<>(), ordersInfo),
             new ColumnDTO(new TitleDto("paymentDate", "Дата оплати", "Payment date"), "paymentDate", 20,
                 false, true, true, 5, EditType.READ_ONLY, new ArrayList<>(), ordersInfo),
-            new ColumnDTO(new TitleDto("commentsForOrder", "Коментар адміністратора", "Admin comment"),
-                "commentsForOrder",
-                20, false, true, false, 33, EditType.READ_ONLY, new ArrayList<>(), ordersInfo),
+            new ColumnDTO(new TitleDto(ORDER_COMMENT, "Коментар адміністратора", "Admin comment"),
+                ORDER_COMMENT,
+                20, false, true, false, 33, EditType.INLINE, new ArrayList<>(), ordersInfo),
             new ColumnDTO(new TitleDto("clientName", "Ім'я клієнта", "Client name"), "clientName", 20,
                 false, true, false, 6, EditType.READ_ONLY, new ArrayList<>(), customersInfo),
             new ColumnDTO(new TitleDto("clientPhone", "Телефон клієнта", "Phone number"), "clientPhoneNumber",
@@ -166,30 +193,46 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                 customersInfo),
             new ColumnDTO(new TitleDto("senderEmail", "Email відправника", "Sender email"), "senderEmail", 20,
                 false, true, false, 11, EditType.READ_ONLY, new ArrayList<>(), customersInfo),
-            new ColumnDTO(new TitleDto("violationsAmount", "Кількість порушень", "Violations"),
+            new ColumnDTO(new TitleDto("violationsAmount", "Кількість порушень клієнта", "Violations"),
                 "violationsAmount", 20, false, true, false, 12, EditType.READ_ONLY, new ArrayList<>(), customersInfo),
             new ColumnDTO(new TitleDto("region", "Область", "Region"), "region", 20, false,
-                true, true, 35, EditType.READ_ONLY, regionsList(), exportAddress),
+                true, true, 38, EditType.READ_ONLY, new ArrayList<>(), exportAddress),
             new ColumnDTO(new TitleDto("city", "Місто", "City"), "city", 20,
                 false,
-                true, true, 36, EditType.READ_ONLY, cityList(), exportAddress),
-            new ColumnDTO(new TitleDto("district", "Район", "District"), "district", 20, false,
-                true, true, 37, EditType.READ_ONLY, districtList(), exportAddress),
+                true, true, 39, EditType.READ_ONLY, new ArrayList<>(), exportAddress),
+            new ColumnDTO(new TitleDto(DISTRICT, "Район", "District"), DISTRICT, 20, false,
+                true, true, 40, EditType.READ_ONLY, new ArrayList<>(), exportAddress),
             new ColumnDTO(new TitleDto("address", "Адреса", "Address"), "address", 20, false, true,
                 false, 15,
                 EditType.READ_ONLY, new ArrayList<>(), exportAddress),
             new ColumnDTO(
-                new TitleDto("commentToAddressForClient", "Коментар до адреси",
+                new TitleDto(ADDRESS_COMMENT, "Коментар до адреси",
                     "Comment to address"),
-                "commentToAddressForClient", 20, false, true, false, 16, EditType.READ_ONLY, new ArrayList<>(),
+                ADDRESS_COMMENT, 20, false, true, false, 16, EditType.INLINE, new ArrayList<>(),
                 exportAddress),
-            new ColumnDTO(new TitleDto("bagsAmount", "К-сть пакетів", "Bags amount"), "bagAmount", 20, false, true,
+            new ColumnDTO(new TitleDto("mixedWaste120L", "Мікс 120л", "Mix 120l"), "mixedWaste120L",
+                20, false, true,
                 false,
                 17,
                 EditType.READ_ONLY, new ArrayList<>(), orderDetails),
+            new ColumnDTO(new TitleDto("textileWaste60L", "Текстиль 60л", "Textile 60l"), "textileWaste60L",
+                20, false, true,
+                false,
+                35,
+                EditType.READ_ONLY, new ArrayList<>(), orderDetails),
+            new ColumnDTO(new TitleDto("textileWaste20L", "Текстиль 20л", "Textile 20l"), "textileWaste20L",
+                20, false, true,
+                false,
+                36,
+                EditType.READ_ONLY, new ArrayList<>(), orderDetails),
+            new ColumnDTO(new TitleDto("otherPackages", "Інші пакети", "Other packages"), "otherPackages",
+                20, false, true,
+                false,
+                37,
+                EditType.READ_ONLY, new ArrayList<>(), orderDetails),
             new ColumnDTO(new TitleDto("totalOrderSum", "Сума замовлення", "Total order sum"), "totalOrderSum",
                 20, false, true, false, 18, EditType.READ_ONLY, new ArrayList<>(), orderDetails),
-            new ColumnDTO(new TitleDto("orderCertificateCode", "№ сертифікату", "Certificate №"),
+            new ColumnDTO(new TitleDto("orderCertificateCode", "№ сертифікату", "Order certificate code"),
                 "orderCertificateCode",
                 20, false, true, false, 19, EditType.READ_ONLY, new ArrayList<>(), orderDetails),
             new ColumnDTO(new TitleDto("generalDiscount", "Загальна знижка", "General discount"),
@@ -197,9 +240,9 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
             new ColumnDTO(new TitleDto("amountDue", "Сума до оплати", "Amount due"), "amountDue", 20,
                 false, true, false, 21, EditType.READ_ONLY, new ArrayList<>(), orderDetails),
             new ColumnDTO(
-                new TitleDto("commentForOrderByClient", "Коментар до замовлення",
+                new TitleDto(CLIENT_COMMENT, "Коментар до замовлення",
                     "Comment to the order"),
-                "commentForOrderByClient", 20, false, true, false, 22, EditType.READ_ONLY, new ArrayList<>(),
+                CLIENT_COMMENT, 20, false, true, false, 22, EditType.INLINE, new ArrayList<>(),
                 ordersInfo),
             new ColumnDTO(new TitleDto("totalPayment", "Оплата", "Total payment"),
                 "totalPayment", 20, false, true,
@@ -215,7 +258,7 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
             new ColumnDTO(new TitleDto(RECEIVING, "Станція приймання", "Receiving station"),
                 RECEIVING, 20, false, true, true, 27, EditType.SELECT, receivingStationList(),
                 exportDetails),
-            new ColumnDTO(new TitleDto(CALLER, "Менеджер обдзвону", "Call manager"), CALLER, 20,
+            new ColumnDTO(new TitleDto(CALLER, "Менеджер", "Manager"), CALLER, 20,
                 false, true, true, 29, EditType.SELECT, callerList(), responsible),
             new ColumnDTO(new TitleDto(LOGIC_MAN, "Логіст", "Logistician"), LOGIC_MAN, 20, false,
                 true, true, 30, EditType.SELECT, logicManList(), responsible),
@@ -225,11 +268,12 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                 true, true, 32, EditType.SELECT, navigatorList(), responsible),
             new ColumnDTO(new TitleDto("blockedBy", "Ким заблоковано", "Blocked by"), "blockedBy",
                 20, false, true, false, 34, EditType.READ_ONLY, blockingStatusListForDevelopStage(),
-                ordersInfo))));
+                ordersInfo));
         return new TableParamsDto(orderPage, orderSearchCriteria, columnDTOS, columnBelongingListForDevelopStage());
     }
 
     @Override
+    @Transactional
     public ChangeOrderResponseDTO chooseOrdersDataSwitcher(String email,
         RequestToChangeOrdersDataDto requestToChangeOrdersDataDTO) {
         String columnName = requestToChangeOrdersDataDTO.getColumnName();
@@ -240,32 +284,137 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
         }
         Employee employee = employeeRepository.findByEmail(email)
             .orElseThrow(() -> new EntityNotFoundException(EMPLOYEE_NOT_FOUND));
-        switch (columnName) {
-            case ORDER_STATUS:
-                return createReturnForSwitchChangeOrder(orderStatusForDevelopStage(ordersId, value, employee));
-            case DATE_OF_EXPORT:
-                return createReturnForSwitchChangeOrder(dateOfExportForDevelopStage(ordersId, value, employee.getId()));
-            case TIME_OF_EXPORT:
-                return createReturnForSwitchChangeOrder(timeOfExportForDevelopStage(ordersId, value, employee.getId()));
-            case RECEIVING:
-                return createReturnForSwitchChangeOrder(
-                    receivingStationForDevelopStage(ordersId, value, employee.getId()));
-            case CANCELLATION_REASON:
-                return createReturnForSwitchChangeOrder(
-                    cancellationReasonForDevelopStage(ordersId, value, employee.getId()));
-            case CANCELLATION_COMMENT:
-                return createReturnForSwitchChangeOrder(
-                    cancellationCommentForDevelopStage(ordersId, value, employee));
-            case ADMIN_COMMENT:
-                return createReturnForSwitchChangeOrder(
-                    adminCommentForDevelopStage(ordersId, value, employee));
-            default:
+        return switch (columnName) {
+            case ORDER_STATUS ->
+                createReturnForSwitchChangeOrder(orderStatusForDevelopStage(ordersId, value, employee));
+            case DATE_OF_EXPORT ->
+                createReturnForSwitchChangeOrder(dateOfExportForDevelopStage(ordersId, value, employee.getId()));
+            case TIME_OF_EXPORT ->
+                createReturnForSwitchChangeOrder(timeOfExportForDevelopStage(ordersId, value, employee.getId()));
+            case RECEIVING -> createReturnForSwitchChangeOrder(
+                receivingStationForDevelopStage(ordersId, value, employee.getId()));
+            case CANCELLATION_REASON -> createReturnForSwitchChangeOrder(
+                cancellationReasonForDevelopStage(ordersId, value, employee.getId()));
+            case CANCELLATION_COMMENT -> createReturnForSwitchChangeOrder(
+                cancellationCommentForDevelopStage(ordersId, value, employee));
+            case ADMIN_COMMENT -> createReturnForSwitchChangeOrder(
+                adminCommentForDevelopStage(ordersId, value, employee));
+            case ADDRESS_COMMENT -> createReturnForSwitchChangeOrder(
+                addAddressComment(ordersId, value, employee));
+            case CLIENT_COMMENT, ORDER_COMMENT -> createReturnForSwitchChangeOrder(
+                addCommentToOrder(ordersId, value, employee, columnName));
+            default -> {
                 Long position = ColumnNameToPosition.columnNameToEmployeePosition(columnName);
-                return createReturnForSwitchChangeOrder(responsibleEmployee(ordersId, value, position, email));
+                yield createReturnForSwitchChangeOrder(responsibleEmployee(ordersId, value, position, email));
+            }
+        };
+    }
+
+    /**
+     * Adds an address comment to a list of orders. For each order ID in the
+     * provided list, this method attempts to add an address comment. If the order
+     * is found and valid, the comment is set using the provided value. If any
+     * exception occurs during the process, the order ID is added to a list of
+     * unresolved goals.
+     *
+     * @param ordersId list of order IDs to update
+     * @param value    the comment to be added to the order's address
+     * @param employee the employee making the change
+     * @return a list of order IDs for which the comment could not be added
+     */
+    private List<Long> addAddressComment(List<Long> ordersId, String value, Employee employee) {
+        List<Long> unresolvedGoals = new ArrayList<>();
+
+        for (Long orderId : ordersId) {
+            try {
+                Order order = orderRepository.findById(orderId)
+                    .orElseThrow(() -> new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST + orderId));
+
+                validateOrder(order, employee);
+                setAddressComment(value, orderId);
+
+                eventService.save(OrderHistory.ADD_ADMIN_COMMENT, UBS_ADMIN, order);
+                orderLockService.unlockOrder(order);
+            } catch (Exception e) {
+                unresolvedGoals.add(orderId);
+            }
+        }
+        return unresolvedGoals;
+    }
+
+    /**
+     * Updates the address comment of an order.
+     *
+     * @param value   the new comment
+     * @param orderId the id of the order
+     * @throws NotFoundException if the order does not have an address
+     */
+    private void setAddressComment(String value, Long orderId) {
+        OrderAddress address = orderAddressRepository.findByOrderId(orderId)
+            .orElseThrow(() -> new NotFoundException(NOT_FOUND_ADDRESS_BY_ORDER_ID + orderId));
+
+        address.setAddressComment(value);
+        orderAddressRepository.save(address);
+    }
+
+    /**
+     * Add comment to order.
+     *
+     * @param ordersId   list of order ids
+     * @param value      comment value
+     * @param employee   employee who makes changes
+     * @param columnName column name
+     * @return list of order ids with unresolved goals
+     */
+    private List<Long> addCommentToOrder(List<Long> ordersId, String value, Employee employee, String columnName) {
+        Map<String, Consumer<Order>> commentSetters = Map.of(
+            CLIENT_COMMENT, order -> order.setComment(value),
+            ORDER_COMMENT, order -> order.setAdminComment(value));
+
+        List<Long> unresolvedGoals = new ArrayList<>();
+
+        for (Long orderId : ordersId) {
+            try {
+                Order order = orderRepository.findById(orderId)
+                    .orElseThrow(() -> new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST + orderId));
+
+                validateOrder(order, employee);
+
+                commentSetters.get(columnName).accept(order);
+
+                eventService.save(OrderHistory.ADD_ADMIN_COMMENT, UBS_ADMIN, order);
+                orderLockService.unlockOrder(order);
+            } catch (Exception e) {
+                unresolvedGoals.add(orderId);
+            }
+        }
+        return unresolvedGoals;
+    }
+
+    /**
+     * Checks if the given {@code order} can be modified by the current
+     * {@code employee}. If the order is blocked by another employee, throws
+     * {@link BadRequestException}. If the order status is
+     * {@link OrderStatus#CANCELED}, {@link OrderStatus#DONE}, or
+     * {@link OrderStatus#BROUGHT_IT_HIMSELF}, throws {@link BadRequestException}.
+     *
+     * @param order    the order to validate
+     * @param employee the current employee
+     * @throws BadRequestException if the order cannot be modified
+     */
+    private void validateOrder(Order order, Employee employee) {
+        if (isOrderBlockedByAnotherEmployee(order, employee.getId())) {
+            throw new BadRequestException(ORDER_IS_BLOCKED + order.getBlockedByEmployee().getId());
+        }
+        if (OrderStatus.CANCELED.equals(order.getOrderStatus())
+            || OrderStatus.DONE.equals(order.getOrderStatus())
+            || OrderStatus.BROUGHT_IT_HIMSELF.equals(order.getOrderStatus())) {
+            throw new BadRequestException(String.format(ORDER_STATUS_INVALID, order.getId()));
         }
     }
 
     @Override
+    @Cacheable(value = "ColumnWidth", key = "#userUuid")
     public ColumnWidthDto getColumnWidthForEmployee(String userUuid) {
         Employee employee = employeeRepository.findByUuid(userUuid)
             .orElseThrow(() -> new NotFoundException(EMPLOYEE_WITH_UUID_NOT_FOUND));
@@ -276,6 +425,7 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
     }
 
     @Override
+    @CacheEvict(value = "ColumnWidth", key = "#userUuid")
     public void saveColumnWidthForEmployee(ColumnWidthDto columnWidthDto, String userUuid) {
         Employee employee = employeeRepository.findByUuid(userUuid)
             .orElseThrow(() -> new NotFoundException(EMPLOYEE_WITH_UUID_NOT_FOUND));
@@ -296,17 +446,82 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
         }
     }
 
+    @Override
+    @Cacheable("allLocationsInfo")
+    public List<RegionInfoDto> getAllLocationsInfo() {
+        return regionRepository.findAllRegionsWithCitiesAndDistricts().stream()
+            .map(this::toRegionInfoDto)
+            .toList();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void addChatLinkToUser(ChatLinkDto chatLinkDto) {
+        User user = userRepository.findById(chatLinkDto.userId())
+            .orElseThrow(() -> new NotFoundException(USER_WITH_CURRENT_ID_DOES_NOT_EXIST));
+        user.setChatLink(chatLinkDto.link());
+        userRepository.save(user);
+    }
+
+    private RegionInfoDto toRegionInfoDto(Region region) {
+        return RegionInfoDto.builder()
+            .id(region.getId())
+            .nameEn(region.getNameEn())
+            .nameUk(region.getNameUk())
+            .cities(toCityInfoDto(region.getCities()))
+            .build();
+    }
+
+    private List<CityInfoDto> toCityInfoDto(List<City> cities) {
+        return cities.stream()
+            .collect(Collectors.toMap(
+                City::getId,
+                this::toCityInfoDto,
+                (existing, replacement) -> existing))
+            .values()
+            .stream()
+            .toList();
+    }
+
+    private CityInfoDto toCityInfoDto(City city) {
+        return CityInfoDto.builder()
+            .id(city.getId())
+            .nameUk(city.getNameUk())
+            .nameEn(city.getNameEn())
+            .regionId(city.getRegion().getId())
+            .districts(toDistrictInfoDto(city.getDistricts()))
+            .build();
+    }
+
+    private List<DistrictInfoDto> toDistrictInfoDto(Set<District> districts) {
+        return districts.stream()
+            .collect(Collectors.toMap(
+                District::getId,
+                this::toDistrictInfoDto,
+                (existing, replacement) -> existing))
+            .values()
+            .stream()
+            .toList();
+    }
+
+    private DistrictInfoDto toDistrictInfoDto(District district) {
+        return DistrictInfoDto.builder()
+            .id(district.getId())
+            .nameEn(district.getNameEn())
+            .nameUk(district.getNameUk())
+            .cityId(district.getCity().getId())
+            .build();
+    }
+
+    @RequiredArgsConstructor
     private enum ColumnNameToPosition {
         RESPONSIBLE_MANAGER("responsibleManager", 1L),
         RESPONSIBLE_CALLER(CALLER, 2L),
         RESPONSIBLE_LOGICMAN(LOGIC_MAN, 3L),
         RESPONSIBLE_NAVIGATOR(NAVIGATOR, 4L),
         RESPONSIBLE_DRIVER(DRIVER, 5L);
-
-        ColumnNameToPosition(String columnValue, Long positionId) {
-            this.columnValue = columnValue;
-            this.positionId = positionId;
-        }
 
         public static Long columnNameToEmployeePosition(String columnName) {
             return Arrays.stream(ColumnNameToPosition.values())
@@ -361,13 +576,13 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
     }
 
     private List<TitleDto> columnBelongingListForDevelopStage() {
-        return Collections.unmodifiableList(new ArrayList<>(Arrays.asList(
+        return List.of(
             new TitleDto("ORDERS_INFO", "Інформація про замовлення", "order info"),
             new TitleDto("CUSTOMERS_INFO", "Інформація про клієнта", "customers info"),
             new TitleDto("EXPORT_ADDRESS", "Адреса вивезення", "export address"),
             new TitleDto("ORDERS_DETAILS", "Деталі замовлення", "orders details"),
             new TitleDto("EXPORT_DETAILS", "Деталі вивезення", "export details"),
-            new TitleDto("RESPONSIBLE", "Відповідальні особи", "responsible persons"))));
+            new TitleDto("RESPONSIBLE", "Відповідальні особи", "responsible persons"));
     }
 
     private List<OptionForColumnDTO> receivingStationList() {
@@ -419,30 +634,6 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
         return optionForColumnDTOS;
     }
 
-    private List<OptionForColumnDTO> districtList() {
-        return addressRepository.findDistinctDistricts()
-            .stream()
-            .map(address -> OptionForColumnDTO
-                .builder()
-                .key(address.getId().toString())
-                .en(address.getDistrictEn())
-                .ua(address.getDistrict())
-                .build())
-            .collect(Collectors.toList());
-    }
-
-    private List<OptionForColumnDTO> cityList() {
-        return addressRepository.findDistinctCities()
-            .stream()
-            .map(address -> OptionForColumnDTO
-                .builder()
-                .key(address.getId().toString())
-                .en(address.getCityEn())
-                .ua(address.getCity())
-                .build())
-            .collect(Collectors.toList());
-    }
-
     private List<OptionForColumnDTO> includeItemsWithoutResponsiblePerson(String nameUa, String nameEn) {
         List<OptionForColumnDTO> optionForColumnDTOS = new ArrayList<>();
         optionForColumnDTOS.add(OptionForColumnDTO.builder()
@@ -463,7 +654,7 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                 Order existedOrder = orderRepository.findById(orderId)
                     .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
                 if (isOrderBlockedByAnotherEmployee(existedOrder, employee.getId())) {
-                    throw new IllegalArgumentException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
+                    throw new BadRequestException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
                 }
                 if (existedOrder.getOrderStatus().checkPossibleStatus(updatedStatusValue)) {
                     existedOrder.setOrderStatus(OrderStatus.valueOf(updatedStatusValue));
@@ -478,9 +669,8 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                     notificationService.notifyBonusesFromCanceledOrder(existedOrder);
                     returnAllPointsFromOrder(existedOrder);
                 }
-                existedOrder.setBlocked(false);
-                existedOrder.setBlockedByEmployee(null);
-                orderRepository.save(existedOrder);
+
+                orderLockService.unlockOrder(existedOrder);
 
                 if (OrderStatus.BROUGHT_IT_HIMSELF == OrderStatus.valueOf(updatedStatusValue)) {
                     eventService.save(OrderHistory.ORDER_BROUGHT_IT_HIMSELF,
@@ -535,6 +725,7 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
             order.setReceivingStation(null);
             employeeOrderPositionRepository.deleteAll(order.getEmployeeOrderPositions());
             order.setEmployeeOrderPositions(null);
+            orderRepository.save(order);
         }
     }
 
@@ -547,13 +738,11 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                     Order existedOrder = orderRepository.findById(orderId)
                         .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
                     if (isOrderBlockedByAnotherEmployee(existedOrder, employeeId)) {
-                        throw new IllegalArgumentException(
+                        throw new BadRequestException(
                             ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
                     }
                     existedOrder.setCancellationReason(CancellationReason.valueOf(value));
-                    existedOrder.setBlocked(false);
-                    existedOrder.setBlockedByEmployee(null);
-                    orderRepository.save(existedOrder);
+                    orderLockService.unlockOrder(existedOrder);
                 } catch (Exception e) {
                     unresolvedGoals.add(orderId);
                 }
@@ -570,10 +759,8 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                 Order existedOrder = orderRepository.findById(orderId)
                     .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
                 if (isOrderBlockedByAnotherEmployee(existedOrder, employee.getId())) {
-                    throw new IllegalArgumentException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
+                    throw new BadRequestException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
                 }
-                existedOrder.setBlocked(false);
-                existedOrder.setBlockedByEmployee(null);
                 existedOrder.getEvents().add(Event.builder()
                     .order(existedOrder)
                     .eventDate(LocalDateTime.now())
@@ -581,7 +768,7 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                     .eventName(OrderHistory.ORDER_CANCELLED + "  " + value)
                     .build());
                 existedOrder.setCancellationComment(value);
-                orderRepository.save(existedOrder);
+                orderLockService.unlockOrder(existedOrder);
             } catch (Exception e) {
                 unresolvedGoals.add(orderId);
             }
@@ -597,7 +784,7 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                     .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
 
                 if (isOrderBlockedByAnotherEmployee(existedOrder, employee.getId())) {
-                    throw new IllegalArgumentException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
+                    throw new BadRequestException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
                 }
 
                 existedOrder.getEvents().add(Event.builder()
@@ -607,9 +794,7 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                     .eventName(OrderHistory.ADD_ADMIN_COMMENT + "  " + value)
                     .build());
                 existedOrder.setAdminComment(value);
-                existedOrder.setBlocked(false);
-                existedOrder.setBlockedByEmployee(null);
-                orderRepository.save(existedOrder);
+                orderLockService.unlockOrder(existedOrder);
             } catch (Exception e) {
                 unresolvedGoals.add(orderId);
             }
@@ -626,7 +811,7 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                 Order existedOrder = orderRepository.findById(orderId)
                     .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
                 if (isOrderBlockedByAnotherEmployee(existedOrder, employeeId)) {
-                    throw new IllegalArgumentException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
+                    throw new BadRequestException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
                 }
                 existedOrder.setDateOfExport(date);
                 if (existedOrder.getDeliverFrom() != null) {
@@ -635,9 +820,7 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                 if (existedOrder.getDeliverTo() != null) {
                     existedOrder.setDeliverTo(LocalDateTime.of(date, existedOrder.getDeliverTo().toLocalTime()));
                 }
-                existedOrder.setBlocked(false);
-                existedOrder.setBlockedByEmployee(null);
-                orderRepository.save(existedOrder);
+                orderLockService.unlockOrder(existedOrder);
             } catch (Exception e) {
                 unresolvedGoals.add(orderId);
             }
@@ -657,16 +840,14 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                 Order existedOrder = orderRepository.findById(orderId)
                     .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
                 if (isOrderBlockedByAnotherEmployee(existedOrder, employeeId)) {
-                    throw new IllegalArgumentException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
+                    throw new BadRequestException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
                 }
                 if (existedOrder.getDateOfExport() == null) {
                     throw new IllegalStateException(DATE_OF_EXPORT_NOT_SPECIFIED_FOR_ORDER + existedOrder.getId());
                 }
                 existedOrder.setDeliverFrom(LocalDateTime.of(existedOrder.getDateOfExport(), timeFrom));
                 existedOrder.setDeliverTo(LocalDateTime.of(existedOrder.getDateOfExport(), timeTo));
-                existedOrder.setBlocked(false);
-                existedOrder.setBlockedByEmployee(null);
-                orderRepository.save(existedOrder);
+                orderLockService.unlockOrder(existedOrder);
             } catch (Exception e) {
                 unresolvedGoals.add(orderId);
             }
@@ -676,19 +857,17 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
 
     @Override
     public synchronized List<Long> receivingStationForDevelopStage(List<Long> ordersId, String value, Long employeeId) {
-        ReceivingStation station = receivingStationRepository.getOne(Long.parseLong(value));
+        ReceivingStation station = receivingStationRepository.getReferenceById(Long.parseLong(value));
         List<Long> unresolvedGoals = new ArrayList<>();
         for (Long orderId : ordersId) {
             try {
                 Order existedOrder = orderRepository.findById(orderId)
                     .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
                 if (isOrderBlockedByAnotherEmployee(existedOrder, employeeId)) {
-                    throw new IllegalArgumentException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
+                    throw new BadRequestException(ORDER_IS_BLOCKED + existedOrder.getBlockedByEmployee().getId());
                 }
                 existedOrder.setReceivingStation(station);
-                existedOrder.setBlocked(false);
-                existedOrder.setBlockedByEmployee(null);
-                orderRepository.save(existedOrder);
+                orderLockService.unlockOrder(existedOrder);
             } catch (Exception e) {
                 unresolvedGoals.add(orderId);
             }
@@ -754,10 +933,8 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
             if (Boolean.TRUE.equals(employeeOrderPositionRepository.existsByOrderAndPosition(order, position))) {
                 employeeOrderPositionRepository.delete(order, position);
                 String historyChanges = eventService.changesWithResponsibleEmployee(position.getId(), Boolean.TRUE);
-                order.setBlocked(false);
-                order.setBlockedByEmployee(null);
+                orderLockService.unlockOrder(order);
                 eventService.saveEvent(historyChanges, currentEmployee.getEmail(), order);
-                orderRepository.save(order);
             }
         } catch (Exception e) {
             unresolvedGoals.add(orderId);
@@ -810,10 +987,8 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
                 historyChanges = eventService.changesWithResponsibleEmployee(position.getId(), Boolean.FALSE);
             }
 
-            order.setBlocked(false);
-            order.setBlockedByEmployee(null);
+            orderLockService.unlockOrder(order);
             eventService.saveEvent(historyChanges, currentEmployee.getEmail(), order);
-            orderRepository.save(order);
         } catch (Exception e) {
             unresolvedGoals.add(orderId);
         }
@@ -870,20 +1045,18 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
             .orElseThrow(() -> new EntityNotFoundException(EMPLOYEE_NOT_FOUND));
         List<BlockedOrderDto> blockedOrderDTOS = new ArrayList<>();
         if (orders.isEmpty()) {
-            orderRepository.setBlockedEmployeeForAllOrders(employee.getId());
+            orderRepository.setBlockedEmployeeForAllOrders(employee.getId(), LocalDateTime.now());
         }
         for (Long orderId : orders) {
             Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
+                .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST + orderId));
             if (order.isBlocked() && !order.getBlockedByEmployee().equals(employee)) {
                 blockedOrderDTOS.add(BlockedOrderDto
                     .builder().orderId(orderId).userName(String.format("%s %s",
                         order.getBlockedByEmployee().getFirstName(), order.getBlockedByEmployee().getLastName()))
                     .build());
             } else {
-                order.setBlocked(true);
-                order.setBlockedByEmployee(employee);
-                orderRepository.save(order);
+                orderLockService.lockOrder(order, employee);
             }
         }
         return blockedOrderDTOS;
@@ -901,11 +1074,9 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
         List<Long> unblockedOrdersId = new ArrayList<>();
         for (Long orderId : orders) {
             Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
+                .orElseThrow(() -> new EntityNotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST + orderId));
             if (order.isBlocked() && order.getBlockedByEmployee().equals(employee)) {
-                order.setBlocked(false);
-                order.setBlockedByEmployee(null);
-                orderRepository.save(order);
+                orderLockService.unlockOrder(order);
                 unblockedOrdersId.add(order.getId());
             }
         }
@@ -915,17 +1086,5 @@ public class OrdersAdminsPageServiceImpl implements OrdersAdminsPageService {
     private boolean isOrderBlockedByAnotherEmployee(Order order, Long employeeId) {
         return order.getBlockedByEmployee() != null
             && !Objects.equals(employeeId, order.getBlockedByEmployee().getId());
-    }
-
-    private List<OptionForColumnDTO> regionsList() {
-        return addressRepository.findDistinctRegions()
-            .stream()
-            .map(address -> OptionForColumnDTO
-                .builder()
-                .key(address.getId().toString())
-                .en(address.getRegionEn())
-                .ua(address.getRegion())
-                .build())
-            .collect(Collectors.toList());
     }
 }
