@@ -7,29 +7,29 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Map;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-
+import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.Collections;
 import static org.hibernate.validator.internal.util.Contracts.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
+@MockitoSettings(strictness = Strictness.LENIENT)
 class LocationApiServiceTest {
     private static final String API_URL = "https://directory.org.ua/api/katottg";
     private static final String PAGE_SIZE_VALUE = "125";
@@ -47,10 +47,10 @@ class LocationApiServiceTest {
     @Mock
     RestTemplate restTemplate;
 
-    static Map<String, Object> getApiResult(String code, String parent_id, String name, String nameEn) {
+    static Map<String, Object> getApiResult(String code, String parentId, String name, String nameEn) {
         Map<String, Object> apiResult = new HashMap<>();
         apiResult.put(CODE, code);
-        apiResult.put(PARENT_ID, parent_id);
+        apiResult.put(PARENT_ID, parentId);
         apiResult.put(NAME, name);
         apiResult.put(NAME_EN, nameEn);
         return apiResult;
@@ -58,7 +58,7 @@ class LocationApiServiceTest {
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.initMocks(this);
+        locationApiService = new LocationApiServiceImpl(restTemplate);
     }
 
     private UriComponentsBuilder buildCode(String code, int level) {
@@ -95,7 +95,7 @@ class LocationApiServiceTest {
     private void respond(UriComponentsBuilder builder, List<Map<String, Object>> list) {
         when(restTemplate.exchange(eq(builder.build().encode().toUri()), eq(HttpMethod.GET), eq(null),
             any(ParameterizedTypeReference.class)))
-            .thenReturn(prepareResponseEntity(list));
+                .thenReturn(prepareResponseEntity(list));
     }
 
     ResponseEntity<Map> prepareResponseEntity(List<Map<String, Object>> results) {
@@ -147,18 +147,17 @@ class LocationApiServiceTest {
         UriComponentsBuilder level5BuilderCity =
             buildParent(LocationDivision.DISTRICT_IN_CITY.getLevelId(), "UA46060250010015970");
 
-        respond(level1Builder, Arrays.asList(lvivskaResult));
-        respond(level2BuilderLviv, Arrays.asList(lvivDistrictResult));
-        respond(level2BuilderLvivParent, Arrays.asList(lvivDistrictResult));
-        respond(level3BuilderParentLviv, Arrays.asList(lvivska2Result));
-        respond(level3BuilderParentLviv, Arrays.asList(lvivska2Result));
-        respond(level3CityBuilder, Arrays.asList(lvivska2Result));
+        respond(level1Builder, List.of(lvivskaResult));
+        respond(level2BuilderLviv, List.of(lvivDistrictResult));
+        respond(level2BuilderLvivParent, List.of(lvivDistrictResult));
+        respond(level3BuilderParentLviv, List.of(lvivska2Result));
+        respond(level3BuilderParentLviv, List.of(lvivska2Result));
+        respond(level3CityBuilder, List.of(lvivska2Result));
         respond(level4BuilderParentLvivCity, Arrays.asList(lvivResult, lviv2Result));
-        respond(level4BuilderLvivCity, Arrays.asList(lvivResult));
-        respond(level4BuilderLviv2City, Arrays.asList(lviv2Result));
+        respond(level4BuilderLvivCity, List.of(lvivResult));
+        respond(level4BuilderLviv2City, List.of(lviv2Result));
         respond(level5BuilderVillage, new ArrayList<>());
         respond(level5BuilderCity, Arrays.asList(halytskyiResult, zaliznychnyiResult));
-
     }
 
     private void initKyiv() {
@@ -171,7 +170,7 @@ class LocationApiServiceTest {
         UriComponentsBuilder kyivBuilder = build(LocationDivision.REGION.getLevelId());
         UriComponentsBuilder kyivDistrictsBuilder =
             buildParent(LocationDivision.DISTRICT_IN_CITY.getLevelId(), "UA80000000000093317");
-        respond(kyivBuilder, Arrays.asList(kyivResult));
+        respond(kyivBuilder, List.of(kyivResult));
         respond(kyivDistrictsBuilder, Arrays.asList(holosiivskyiResult, darnytskyiResult));
 
     }
@@ -187,8 +186,8 @@ class LocationApiServiceTest {
             buildName("Прип’ять", LocationDivision.CITY.getLevelId());
         UriComponentsBuilder levelBuilderPrypiat5 =
             buildParent(LocationDivision.DISTRICT_IN_CITY.getLevelId(), "UA32000000010085013");
-        respond(level1Builder, Arrays.asList(lvivskaResult));
-        respond(levelBuilderPrypiat, Arrays.asList(prypiatResult));
+        respond(level1Builder, List.of(lvivskaResult));
+        respond(levelBuilderPrypiat, List.of(prypiatResult));
         respond(levelBuilderPrypiat5, new ArrayList<>());
         List<LocationDto> districts =
             locationApiService.getAllDistrictsInCityByNames("Львівська область", "Прип'ять");
@@ -196,7 +195,7 @@ class LocationApiServiceTest {
     }
 
     @Test
-    void testGetDisctrictByName_whenNameEn() {
+    void testGetDistrictByName_whenNameEn() {
         initLviv();
         UriComponentsBuilder lvivBuilder = buildName("Lviv", LocationDivision.CITY.getLevelId());
         UriComponentsBuilder lvivskaBuilder = buildName("Lvivska", LocationDivision.REGION.getLevelId());
@@ -234,9 +233,8 @@ class LocationApiServiceTest {
     @Test
     void testGetAllDistrictsInCityByNames_whenCityNotExist() {
         initLviv();
-        assertThrows(NotFoundException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("Вінницька область", "Львів");
-        });
+        assertThrows(NotFoundException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("Вінницька область", "Львів"));
     }
 
     @Test
@@ -253,9 +251,8 @@ class LocationApiServiceTest {
 
     @Test
     void testGetAllDistrictsInCityByNames_whenCityNotFound() {
-        assertThrows(NotFoundException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("Львівська область", "UNREAL");
-        });
+        assertThrows(NotFoundException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("Львівська область", "UNREAL"));
     }
 
     @Test
@@ -264,15 +261,13 @@ class LocationApiServiceTest {
         List<Map<String, Object>> results = Collections.singletonList(apiResult1);
         ResponseEntity<Map> responseEntity = prepareResponseEntity(results);
         when(restTemplate.getForEntity((API_URL), Map.class)).thenReturn(responseEntity);
-        assertThrows(NotFoundException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("RegionName", "CityName");
-        });
+        assertThrows(NotFoundException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("RegionName", "CityName"));
 
     }
 
     @Test
     void testGetAllDistrictsInCityByNames_whenNoDistricts() {
-
         Map<String, Object> lvivskaResult =
             getApiResult("UA46000000000026241", null, "Львівська", "Lvivska");
         Map<String, Object> lvivDistrictResult =
@@ -297,10 +292,10 @@ class LocationApiServiceTest {
         UriComponentsBuilder level5BuilderVillage =
             buildParent(LocationDivision.DISTRICT_IN_CITY.getLevelId(), "UA46060230040034427");
 
-        respond(level1Builder, Arrays.asList(lvivskaResult));
-        respond(level2BuilderLviv, Arrays.asList(lvivDistrictResult));
-        respond(level2BuilderLvivParent, Arrays.asList(lvivDistrictResult));
-        respond(level3VillageBuilder, Arrays.asList(kulykivskaResult));
+        respond(level1Builder, List.of(lvivskaResult));
+        respond(level2BuilderLviv, List.of(lvivDistrictResult));
+        respond(level2BuilderLvivParent, List.of(lvivDistrictResult));
+        respond(level3VillageBuilder, List.of(kulykivskaResult));
         respond(level4BuilderVillage, Arrays.asList(kulykivResult, vidnivResult));
         respond(level4BuilderParentLvivCity, Arrays.asList(kulykivResult, vidnivResult));
         respond(level5BuilderVillage, new ArrayList<>());
@@ -308,7 +303,7 @@ class LocationApiServiceTest {
         assertNotNull(allDistricts);
         assertFalse(allDistricts.isEmpty());
         assertEquals(1, allDistricts.size());
-        assertLocationDto(allDistricts.get(0), "UA46060230040034427", "UA46060230000093092", "Віднів", "Vidniv");
+        assertLocationDto(allDistricts.getFirst(), "UA46060230040034427", "UA46060230000093092", "Віднів", "Vidniv");
     }
 
     @Test
@@ -320,47 +315,36 @@ class LocationApiServiceTest {
 
     @Test
     void testGetGetAllDistrictsInCityByNames_whenCityValueNulOrEmpty() {
-        assertThrows(IllegalArgumentException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("Lvivska область", null);
-        });
-        assertThrows(IllegalArgumentException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("Lvivska область", "");
-        });
+        assertThrows(IllegalArgumentException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("Lvivska область", null));
+        assertThrows(IllegalArgumentException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("Lvivska область", ""));
     }
 
     @Test
     void testGetGetAllDistrictsInCityByNames_whenRegionValueNullOrEmpty() {
-        assertThrows(IllegalArgumentException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames(null, "Lviv");
-        });
-        assertThrows(IllegalArgumentException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("", "city Lviv");
-        });
+        assertThrows(IllegalArgumentException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames(null, "Lviv"));
+        assertThrows(IllegalArgumentException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("", "city Lviv"));
     }
 
     @Test
     void testGetGetAllDistrictsInCityByNames_whenValuesNullOrEmpty() {
-        assertThrows(IllegalArgumentException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames(null, null);
-        });
-        assertThrows(IllegalArgumentException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("", "");
-        });
+        assertThrows(IllegalArgumentException.class, () -> locationApiService.getAllDistrictsInCityByNames(null, null));
+        assertThrows(IllegalArgumentException.class, () -> locationApiService.getAllDistrictsInCityByNames("", ""));
     }
 
     @Test
     void testGetGetAllDistrictsInCityByNames_whenResultEmpty() {
         initLviv();
-        assertThrows(NotFoundException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("Львівська область", "Тест");
-        });
+        assertThrows(NotFoundException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("Львівська область", "Тест"));
     }
 
     @Test
     void testGetGetAllDistrictsInCityByNames_whenUrlEmpty() {
-        assertThrows(NotFoundException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("Тест", "Тест");
-        });
+        assertThrows(NotFoundException.class, () -> locationApiService.getAllDistrictsInCityByNames("Тест", "Тест"));
     }
 
     @Test
@@ -383,13 +367,12 @@ class LocationApiServiceTest {
             buildCode("UA74040000000028062", LocationDivision.DISTRICT_IN_REGION.getLevelId());
 
         respond(builder, Arrays.asList(mykolaivskaResult, chernihivskaResult));
-        respond(builder4, Arrays.asList(mykolaiv2Result));
-        respond(builder3, Arrays.asList(bobrovytskaDistrictResult));
-        respond(builder2, Arrays.asList(nizhynskyiResult));
+        respond(builder4, List.of(mykolaiv2Result));
+        respond(builder3, List.of(bobrovytskaDistrictResult));
+        respond(builder2, List.of(nizhynskyiResult));
 
-        assertThrows(NotFoundException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("Миколаївська область", "Миколаїв");
-        });
+        assertThrows(NotFoundException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("Миколаївська область", "Миколаїв"));
     }
 
     @Test
@@ -406,28 +389,30 @@ class LocationApiServiceTest {
             getApiResult("UA74040000000028062", "UA74000000000025378", "Ніжинський", "Nizhynskyi");
         Map<String, Object> bobrovytskaDistrictResult =
             getApiResult("UA74040050000013413", "UA74040000000028062", "Бобровицька", "Bobrovytska");
-        UriComponentsBuilder builder = build(LocationDivision.REGION.getLevelId());
-        UriComponentsBuilder builder4 = buildName("Миколаїв", LocationDivision.CITY.getLevelId());
-        UriComponentsBuilder builder3 = buildCode("UA74040050000013413", LocationDivision.LOCAL_COMMUNITY.getLevelId());
-        UriComponentsBuilder builder2 =
+
+        UriComponentsBuilder regionBuilder = build(LocationDivision.REGION.getLevelId());
+        UriComponentsBuilder cityBuilder = buildName("Миколаїв", LocationDivision.CITY.getLevelId());
+        UriComponentsBuilder localCommunityBuilder =
+            buildCode("UA74040050000013413", LocationDivision.LOCAL_COMMUNITY.getLevelId());
+        UriComponentsBuilder districtInRegionBuilder =
             buildCode("UA74040000000028062", LocationDivision.DISTRICT_IN_REGION.getLevelId());
-        UriComponentsBuilder builder2_2 =
+        UriComponentsBuilder parentDistrictBuilder =
             buildParent(LocationDivision.DISTRICT_IN_REGION.getLevelId(), "UA48000000000039575");
-        UriComponentsBuilder builder3_2 =
+        UriComponentsBuilder parentLocalCommunityBuilder =
             buildParent(LocationDivision.LOCAL_COMMUNITY.getLevelId(), "UA48060000000094390");
-        UriComponentsBuilder builder4_2 = buildParent(LocationDivision.CITY.getLevelId(), "UA48060150000071713");
+        UriComponentsBuilder parentCityBuilder =
+            buildParent(LocationDivision.CITY.getLevelId(), "UA48060150000071713");
 
-        respond(builder, Arrays.asList(mykolaivskaResult, chernihivskaResult));
-        respond(builder4, new ArrayList<>());
-        respond(builder3, Arrays.asList(bobrovytskaDistrictResult));
-        respond(builder2, Arrays.asList(nizhynskyiResult));
-        respond(builder2_2, Arrays.asList(mykolaivskyiResult));
-        respond(builder3_2, Arrays.asList(mykolaivskaDistrictResult));
-        respond(builder4_2, new ArrayList<>());
+        respond(regionBuilder, Arrays.asList(mykolaivskaResult, chernihivskaResult));
+        respond(cityBuilder, new ArrayList<>());
+        respond(localCommunityBuilder, List.of(bobrovytskaDistrictResult));
+        respond(districtInRegionBuilder, List.of(nizhynskyiResult));
+        respond(parentDistrictBuilder, List.of(mykolaivskyiResult));
+        respond(parentLocalCommunityBuilder, List.of(mykolaivskaDistrictResult));
+        respond(parentCityBuilder, new ArrayList<>());
 
-        assertThrows(NotFoundException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("Миколаївська область", "Миколаїв");
-        });
+        assertThrows(NotFoundException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("Миколаївська область", "Миколаїв"));
     }
 
     @Test
@@ -440,8 +425,6 @@ class LocationApiServiceTest {
             getApiResult("UA48060150000071713", "UA48060000000094390", "Миколаївська", "Mykolaivska");
         Map<String, Object> chernihivskaResult =
             getApiResult("UA74000000000025378", null, "Чернігівська", "Chernihivska");
-        Map<String, Object> nizhynskyiResult =
-            getApiResult("UA74040000000028062", "UA74000000000025378", "Ніжинський", "Nizhynskyi");
         Map<String, Object> bobrovytskaDistrictResult =
             getApiResult("UA74040050000013413", "UA74040000000028062", "Бобровицька", "Bobrovytska");
         Map<String, Object> mykolaiv2Result =
@@ -460,15 +443,14 @@ class LocationApiServiceTest {
 
         respond(builder, Arrays.asList(mykolaivskaResult, chernihivskaResult));
         respond(builder4, new ArrayList<>());
-        respond(builder3, Arrays.asList(bobrovytskaDistrictResult));
+        respond(builder3, List.of(bobrovytskaDistrictResult));
         respond(builder2, new ArrayList<>());
-        respond(builder2_2, Arrays.asList(mykolaivskyiResult));
-        respond(builder3_2, Arrays.asList(mykolaivskaDistrictResult));
-        respond(builder4_2, Arrays.asList(mykolaiv2Result));
+        respond(builder2_2, List.of(mykolaivskyiResult));
+        respond(builder3_2, List.of(mykolaivskaDistrictResult));
+        respond(builder4_2, List.of(mykolaiv2Result));
 
-        assertThrows(NotFoundException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("Миколаївська область", "Миколаїв");
-        });
+        assertThrows(NotFoundException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("Миколаївська область", "Миколаїв"));
     }
 
     @Test
@@ -481,8 +463,6 @@ class LocationApiServiceTest {
             getApiResult("UA48060150000071713", "UA48060000000094390", "Миколаївська", "Mykolaivska");
         Map<String, Object> chernihivskaResult =
             getApiResult("UA74000000000025378", null, "Чернігівська", "Chernihivska");
-        Map<String, Object> nizhynskyiResult =
-            getApiResult("UA74040000000028062", "UA74000000000025378", "Ніжинський", "Nizhynskyi");
         Map<String, Object> bobrovytskaDistrictResult =
             getApiResult("UA74040050000013413", "UA74040000000028062", "Бобровицька", "Bobrovytska");
         Map<String, Object> mykolaiv2Result =
@@ -502,17 +482,15 @@ class LocationApiServiceTest {
         UriComponentsBuilder builder4_2 = buildParent(LocationDivision.CITY.getLevelId(), "UA48060150000071713");
 
         respond(builder, Arrays.asList(mykolaivskaResult, chernihivskaResult));
-        respond(builder_2, Arrays.asList(chernihivskaResult));
+        respond(builder_2, List.of(chernihivskaResult));
         respond(builder4, new ArrayList<>());
-        respond(builder3, Arrays.asList(bobrovytskaDistrictResult));
+        respond(builder3, List.of(bobrovytskaDistrictResult));
         respond(builder2, new ArrayList<>());
-        respond(builder2_2, Arrays.asList(mykolaivskyiResult));
-        respond(builder3_2, Arrays.asList(mykolaivskaDistrictResult));
-        respond(builder4_2, Arrays.asList(mykolaiv2Result));
+        respond(builder2_2, List.of(mykolaivskyiResult));
+        respond(builder3_2, List.of(mykolaivskaDistrictResult));
+        respond(builder4_2, List.of(mykolaiv2Result));
 
-        assertThrows(NotFoundException.class, () -> {
-            locationApiService.getAllDistrictsInCityByNames("Миколаївська область", "Миколаїв");
-        });
+        assertThrows(NotFoundException.class,
+            () -> locationApiService.getAllDistrictsInCityByNames("Миколаївська область", "Миколаїв"));
     }
-
 }
